--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,15 +1,20 @@
-.signupForm{
-	display: inline-block;
-	text-align: right;
-	background-color: #CCF57D;
-	border-radius: 3px;
-	padding: 20px;
-	width:60%;
-	height: 70%
+input[type=text]{
+  width: 40%;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
-.titleBar{
+
+.signupFormWrap{
   text-align: center;
   background-color: #CCF57D;
   border-radius: 6px;
-  width: 90%;
+  width: 40%; /*Make this wider in mobile code*/
+  margin-left:60%;
+  padding-bottom: 40%;
+}
+.titleBar{
+  height:5%;
+  background-color:#60B03D;
+  color: white;
+  text-align: center;
 }
