--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -72,4 +72,19 @@ img{
   color: white;
   padding: 10px;
 }
-
+@media only screen and (max-width: 720px) {
+ .signupFormWrap{
+  margin-left: 35%;
+  text-align: center;
+  background-color: #CCF57D;
+  border-radius: 6px;
+  width: 70%; /*This is wider in mobile code*/
+  padding-bottom: 5%;
+ }
+ img{
+	width: 20%;
+ }
+ .pageLeft{
+	width: 30%
+ }
+}
