[Lines 68-87] CSS media query aimed at smartphones
Re-designs the layout of the page; stacks three parts of page instead of setting them up as one on the left, two stacked on the right. Sets images to scale independently to size of screen.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -65,8 +65,23 @@ input[type=submit] {
   color: white;
   padding: 10px;
 }
-@media screen and (max-width: 720px) {
- .fanMonth{
-   background-color: #614a0f;
- }
+@media screen and (max-width: 550px){/*CSS focused on smartphones*/
+	img{
+	  max-width: 100%;
+	  height: auto;
+	}
+	.pageLeft{
+	  width: 100%;
+	}
+	.pageRight{
+	  width: 100%;
+	}
+	.signupFormWrap{
+	  width: 100%;
+	  margin-left: 0%;
+	}
+	.fanMonth{
+	  width: 100%;
+	  margin-left: 0%;
+	}
 }
