[Lines 88-108] Added Media Query: small laptops and tablets
Media query leveraged at small laptops and tablets. Goes up to standard desktop monitor size. Same page lay-out as smartphone setup, but with expanded sizes on forms, text, labels, etc.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -85,3 +85,24 @@ input[type=submit] {
 	  margin-left: 0%;
 	}
 }
+@media screen and (max-width: 1080px){/*media query for adjusting CSS for tablets to small laptops. similar to smartphone layout, but changes sizes of various elements of page*/
+	img{
+	  max-width: 100%;
+	  height: auto;
+	}
+	.signupFormWrap{
+	  float: right;
+	  width: 90%;
+	  margin-bottom: 5px;
+	}
+	.fanMonth{
+	  float: right;
+	  width: 90%;
+	}
+	h2{
+	  font-size: 200%;
+	}
+	label{
+	  font-size: 150%;
+	}
+}
